# FileshareApi

./: .gitignore  Cargo.toml  README.md  todofileshare.txt
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: app_ctx.rs  lib.rs  permissions.rs  route_item.rs  route_repository.rs  route_user.rs  upload.rs
crates/client-cli/: Cargo.toml
crates/client-cli/src/: main.rs  repository.rs
crates/client-cli/src/actions/: clone.rs  editor.rs  init.rs  login.rs  logout.rs  pull.rs  push.rs  remote.rs  status.rs  sync.rs
crates/client-cli/src/content/: connection.rs  diff.rs  filesystem.rs  item.rs  meta_dir.rs  mod.rs
crates/client_web/: Cargo.toml
crates/client_web/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: async_zip.rs  compatibility_upgrade.rs  item.rs  lib.rs  object.rs  repository.rs  subscription.rs  user.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/thumbnailer/: Cargo.toml  build.rs
crates/thumbnailer/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: database_ids.rs  enc_path.rs  enc_string.rs  item.rs  repository.rs  user.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  enc_path.rs  enc_string.rs  lib.rs  server_error.rs
crates/web_client/: Cargo.toml
crates/web_client/src/: lib.rs  static_file_server.rs
migrations/: 10_table_items.sql  11_table_file.sql  11_table_files.sql  12_table_directories.sql  12_table_directory.sql  13_view_items_full.sql  14_function_directory_path.sql  14_trigger_directory_path.sql  15_trigger_items_dependencies.sql  16_function_delete_item.sql  16_trigger_update_directory_content.sql  17_function_delete_item.sql  1_schema.sql  2_types_user_role.sql  3_types_repository_status.sql  4_types_user_access.sql  5_table_user.sql  6_table_repository.sql  7_table_subscriptions.sql  8_table_authtoken.sql  9_table_objects.sql
src/: app_ctx.rs  compatibility_upgrade.rs  config.rs  main.rs
src/database/: item.rs  mod.rs  object.rs  repository.rs  subscription.rs  user.rs
src/routes/: mod.rs  repository.rs  root.rs  route_item.rs  route_repository.rs  route_user.rs  user.rs
src/utils/: async_zip.rs  enc_path.rs  enc_string.rs  mod.rs  permissions.rs  task_manager.rs  thumbnails.rs  upload.rs
src/utils/thumbnails/: mod.rs
src/web_client/: mod.rs  static_file_server.rs
web_client/: .babelrc  .gitignore  handlebars_custom_loader.js  handlebars_loader_function.js  package.json  todofileshare.txt  webpack.common.js
web_client/client/: app.hbs  app.js  app.scss  layout.hbs
web_client/client/common/tools/: client_string.js  filesystem.js  filesystem_upload.js  filesystem_v2.js  get_item_thumbnail.js  mime_utils.js  navigator.js  user.js  utils.js
web_client/client/embed_viewers/: distant_repos.js  index.js
web_client/client/embed_viewers/custom_elements/document/: markdown.js  showdown_loader.js
web_client/client/embed_viewers/custom_elements/lazy_image/: lazy_image.js
web_client/client/embed_viewers/custom_elements/pdf_viewer/: pdf-viewer.hbs  pdf-viewer.js  pdfjsdist_loader.js
web_client/client/layout/: drop_box.js  handlebars_helpers.js  index.js
web_client/client/layout/administration/: administration.scss  administration_panel.js  repos.hbs  stats.hbs  user.hbs
web_client/client/layout/widgets/auth/: auth.js  auth.scss  reset_password.hbs  signin.hbs  signup.hbs
web_client/client/modules/: global_header.js  repository_list.js  viewport.js
web_client/client/modules/authentication/: authentication.js
web_client/client/modules/context_menu/: context_menu.js  context_menu.scss
web_client/client/modules/embed_viewers/: distant_repos.js  index.js
web_client/client/modules/global_header/: global_header.hbs  global_header.js  global_header.scss
web_client/client/modules/modal/: modal.scss
web_client/client/modules/side_bar/: repository_tree.hbs  side_bar.hbs  side_bar.js  side_bar.scss
web_client/client/modules/upload/: upload_item.js  uploader.hbs  uploader.js  uploader.scss
web_client/client/modules/viewport/: viewport.js
web_client/client/stylesheets/: common.scss  drop-box.scss  layout.scss  palette.scss  repos_viewport.scss  user-viewport.scss
web_client/client/stylesheets/base_design/: a.scss  buttons.scss  form.scss  inputs.scss  label.scss  textarea.scss
web_client/client/stylesheets/common/: colors.scss  utils.scss
web_client/client/stylesheets/components/: context_action.scss  message_box.scss  modal.scss  progress-bar.scss
web_client/client/stylesheets/views/: item-preview.scss
web_client/client/types/: app_config.js  encstring.js  event_manager.js  filesystem_stream.js  memory_handler.js  repository.js  streamed_filesystem.js  user.js  viewport_content.js
web_client/client/types/viewport_content/: providers.js  viewport_content.js
web_client/client/utilities/: cookies.js  handlebars_helpers.js  mime_utils.js  request.js  state.js
web_client/public/: index.html
(+169 files in other folders)
