[package]
name = "FileshareApi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "process"] }
anyhow = "1.0.86"
rustls = "0.23.12"
tracing = "0.1.40"
rand = "0.8.5"
urlencoding = "2.1.3"
bcrypt = "0.15.1"
tokio-postgres = "0.7.11"
postgres-from-row = "0.5.2"
postgres-types = "0.2.7"
uuid = { version = "1.10.0", features = ["v4"] }
deunicode = "1.6.0"
which = "6.0.3"
tokio-util = "0.7.12"
mime_guess = "2.0.5"