[package]
name = "fileshare"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "process"] }
anyhow = "1.0.86"
rustls = "0.23.12"
tracing = "0.1.40"
rand = "0.8.5"
urlencoding = "2.1.3"
bcrypt = "0.15.1"
tokio-postgres = "0.7.11"
postgres-from-row = "0.5.2"
postgres-types = "0.2.7"
deunicode = "1.6.0"
which = "6.0.3"
tokio-util = "0.7.12"
mime_guess = "2.0.5"
regex = "1.10.6"
futures = "0.3.30"
http-body-util = "0.1.2"
axum-server-dual-protocol = "0.7.0"
blake3 = "1.5.4"