[package]
name = "fileshare"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[dependencies]

api = { path = "crates/api" }
utils = { path = "crates/utils" }
web_client = { path = "crates/web_client" }
database = { path = "crates/database" }

axum = "0.7.7"
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-server = {  version = "0.7.1", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.7.0"
tracing = "0.1.40"
http-body-util = "0.1.2"
tracing-subscriber = "0.3.18"