[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
tracing = "0.1.40"
tokio = "1.40.0"
tokio-util = "0.7.12"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = "0.9.4"
serde = { version = "1.0.210", features = ["derive"] }
futures = "0.3.31"
blake3 = "1.5.4"
mime_guess = "2.0.5"
rand = "0.8.5"
regex = "1.11.0"

database = { path = "../database" }
utils = { path = "../utils" }
thumbnailer = { path = "../thumbnailer" }
types = { path = "../types" }