[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
tokio = "1.40.0"
tracing = "0.1.40"
postgres-from-row = "0.5.2"
postgres-types = "0.2.7"
serde = { version = "1.0.209", features = ["derive"] }
rand = "0.8.5"
tokio-postgres = "0.7.12"
tokio-util = "0.7.12"

utils = { path = "../utils" }
types = { path = "../types", features = ["axum", "tokio-postgres", "password"] }
